--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,65 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
+  padding: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.bannerHome {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("/bannerpizza.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 150px;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  width: 100%;
+  margin-top: 4rem;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.linea {
+  width: 80%;
+  margin: 10px auto;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.cardPizza {
+  justify-content: left;
+  margin: 10px 80px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.precioCarrito {
+  display: flex;
+  align-items: center;
+}
+
+.precioCarrito h5 {
+  flex-grow: 8;
+}
+.precioCarrito p {
+  flex-grow: 4;
+  color: green;
+}
+
+li {
+  list-style: none;
+}
+
+.pizzadetimg {
+  max-width: 100%;
+  height: 100%;
+}
+
+.footdetpizza {
+  display: flex;
+  justify-content: space-between;
+}
+
+.cardDet {
+  margin-top: 4rem;
+}
+
+.carrito {
+  margin-top: 7rem;
 }
