--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Spicy+Rice&display=swap');
+
 body {
   margin: 0;
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.bannerHome {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+.headerbanner {
+  background-image:
     url("/bannerpizza.jpg");
   background-size: cover;
   background-position: center;
-  height: 150px;
+  height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,10 +21,18 @@ body {
   margin-top: 4rem;
 }
 
-.linea {
-  width: 80%;
-  margin: 10px auto;
+.fondocarrito {
+  background-color: #fff;
 }
+
+.colornavbar {
+  background-color: rgb(181, 106, 8);
+}
+
+.fontdisplay {
+  font-family: "Spicy Rice", serif;
+}
+
 
 .cardPizza {
   justify-content: left;
